[package]
name = "wax"
version = "0.1.0"
edition = "2021"

[dependencies]
candle = { path = "../clone/candle/candle-core", version = "0.2.3", package = "candle-core" }
candle-datasets = { path = "../clone/candle/candle-datasets", version = "0.2.3" }
candle-nn = { path = "../clone/candle/candle-nn", version = "0.2.3" }
candle-transformers = { path = "../clone/candle/candle-transformers", version = "0.2.3" }
tokio = "1.29.1"
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
clap = { version = "4.2.4", features = ["derive"] }
cudarc = { version = "0.9.14", features = ["f16"] }
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.23.0", default-features = false }
memmap2 = "0.7.1"
num_cpus = "1.15.0"
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
rusttype = { version = "0.9", default-features = false }
safetensors = "0.3.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1"
tokenizers = { version = "0.13.4", default-features = false }
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
wav = "1.0.0"
arboard = { version = "3.2.0", default-features = false } # just text
cpal = "0.15.2"
notify-rust = "4.9.0"

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[features]
default = ["cuda"]
#accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
#cudnn = ["candle/cudnn"]
#flash-attn = ["cuda", "candle-transformers/flash-attn"]
#mkl = ["dep:intel-mkl-src", "candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
#nccl = ["cuda", "cudarc/nccl", "dep:half"]
